tests/NormalTests/paczka1/small_fuzzy/36246770.err
Error in line 3: 3BnDxz4IxU A338 46,68
Error in line 2: upVrenkNkfr S352 76,8
